[feature] docker add phpmyadmin

--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -12,6 +12,15 @@ services:
       - ./mysql/init_file:/docker-entrypoint-initdb.d
     networks:
       - acc-network
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    environment:
+      PMA_HOST: acc-onlinedb
+      PMA_PORT: 3306
+    ports:
+      - '8080:80'
+    networks:
+      - acc-network
 networks:
   acc-network:
     driver: bridge
